--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -63,6 +64,7 @@ override.tf.json
 
 ### VisualStudioCode ###
 .vscode/*
+.vscode
 !.vscode/tasks.json
 !.vscode/launch.json
 *.code-workspace
