--- a/.gitignore
+++ b/.gitignore
@@ -73,7 +73,7 @@ override.tf.json
 # Ignore all local history of files
 .history
 .ionide
-
+.vagrant
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,macos,terraform
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
