--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -45,7 +45,7 @@ envoy_version = ENV['ENVOY_VERSION'] || "1.14.5"
 
 $nomad_setup = <<SCRIPT
 echo "Minimal configuration for Nomad UI"
-cat <<CONFIG | sudo tee /etc/nomad.d/default.hcl
+cat <<CONFIG | sudo tee /etc/nomad.d/nomad.hcl
 bind_addr = "0.0.0.0"
 
 advertise {
