--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -7,6 +7,16 @@ private_ip = ENV['PRIVATE_IP'] || "192.168.50.153"
 # Base box selection
 base_box = ENV['BASE_BOX'] || "bento/centos-7"
 
+# Vault variables
+vault_install = ["true", "1"].include?((ENV['VAULT_INSTALL'] || true).to_s.downcase)
+vault_host_port = ENV['VAULT_HOST_PORT'] || 8200
+vault_version = ENV['VAULT_VERSION'] || "1.6.2"
+vault_ent_url = ENV['VAULT_ENT_URL']
+vault_group = "vault"
+vault_user = "vault"
+vault_comment = "Vault"
+vault_home = "/srv/vault"
+
 # Consul variables
 consul_install = ["true", "1"].include?((ENV['CONSUL_INSTALL'] || true).to_s.downcase)
 consul_host_port = ENV['CONSUL_HOST_PORT'] || 8500
@@ -19,17 +29,8 @@ consul_home = "/srv/consul"
 cni_install = ["true", "1"].include?((ENV['CNI_INSTALL'] || true).to_s.downcase)
 cni_version = ENV['CNI_VERSION'] || "0.9.0"
 
-# Vault variables
-vault_install = ["true", "1"].include?((ENV['VAULT_INSTALL'] || true).to_s.downcase)
-vault_host_port = ENV['VAULT_HOST_PORT'] || 8200
-vault_version = ENV['VAULT_VERSION'] || "1.6.2"
-vault_ent_url = ENV['VAULT_ENT_URL']
-vault_group = "vault"
-vault_user = "vault"
-vault_comment = "Vault"
-vault_home = "/srv/vault"
-
 # Nomad variables
+nomad_install = ["true", "1"].include?((ENV['NOMAD_INSTALL'] || true).to_s.downcase)
 nomad_host_port = ENV['NOMAD_HOST_PORT'] || 4646
 nomad_version = ENV['NOMAD_VERSION'] || "1.0.3"
 nomad_ent_url = ENV['NOMAD_ENT_URL']
@@ -45,16 +46,7 @@ envoy_version = ENV['ENVOY_VERSION'] || "1.16.1"
 
 $nomad_setup = <<SCRIPT
 echo "Minimal configuration for Nomad UI"
-cat <<CONFIG | sudo tee /etc/nomad.d/nomad.hcl
-bind_addr = "0.0.0.0"
-
-advertise {
-  http = "#{private_ip}:4646"
-  rpc  = "#{private_ip}:4647"
-  serf = "#{private_ip}:4648"
-}
-CONFIG
-
+sudo cp /tmp/nomad.hcl /etc/nomad.d/nomad.hcl
 sudo systemctl restart nomad
 SCRIPT
 
@@ -74,35 +66,6 @@ Vagrant.configure("2") do |config|
   config.vm.provision "shell",
   path: "scripts/base-setup.sh"
 
-  if (consul_install)
-    # Forward Consul port
-    config.vm.network :forwarded_port, guest: 8500, host: consul_host_port, auto_correct: true
-
-    # Setup Consul user
-    config.vm.provision "shell",
-    path: "scripts/base-setup.sh",
-    env: {
-      "GROUP" => consul_group,
-      "USER" => consul_user,
-      "COMMENT" => consul_comment,
-      "HOME" => consul_home,
-    }
-
-    # Install Consul
-    config.vm.provision "shell",
-    path: "scripts/consul-install.sh",
-    env: {
-      "VERSION" => consul_version,
-      "URL" => consul_ent_url,
-      "USER" => consul_user,
-      "GROUP" => consul_group,
-      "ENVOY_VERSION" => envoy_version,
-      "CNI_VERSION" => cni_version,
-      "CNI_INSTALL" => cni_install,
-      "PRIVATE_IP" => private_ip,
-    }
-  end
-
   if (vault_install)
     # Forward Vault port
     config.vm.network :forwarded_port, guest: 8200, host: vault_host_port, auto_correct: true
@@ -120,21 +83,47 @@ Vagrant.configure("2") do |config|
     }
   end
 
-  # Forward Nomad port
-  config.vm.network :forwarded_port, guest: 4646, host: nomad_host_port, auto_correct: true
+  if (consul_install)
+    # Forward Consul port
+    config.vm.network :forwarded_port, guest: 8500, host: consul_host_port, auto_correct: true
 
-  # Install Nomad
-  config.vm.provision "shell",
-  path: "scripts/nomad-install.sh",
-  env: {
-    "VERSION" => nomad_version,
-    "URL" => nomad_ent_url,
-    "USER" => nomad_user,
-    "GROUP" => nomad_group,
-    "HOME" => nomad_home
-  }
+    # Install Consul
+    config.vm.provision "shell",
+    path: "scripts/consul-install.sh",
+    env: {
+      "GROUP" => consul_group,
+      "USER" => consul_user,
+      "COMMENT" => consul_comment,
+      "HOME" => consul_home,
+      "VERSION" => consul_version,
+      "URL" => consul_ent_url,
+      "USER" => consul_user,
+      "GROUP" => consul_group,
+      "ENVOY_VERSION" => envoy_version,
+      "CNI_VERSION" => cni_version,
+      "CNI_INSTALL" => cni_install,
+      "PRIVATE_IP" => private_ip,
+    }
+  end
 
-  config.vm.provision "shell", inline: $nomad_setup, privileged: false
+  if (nomad_install)
+    # Forward Nomad port
+    config.vm.network :forwarded_port, guest: 4646, host: nomad_host_port, auto_correct: true
+
+    # Install Nomad
+    config.vm.provision "shell",
+    path: "scripts/nomad-install.sh",
+    env: {
+      "VERSION" => nomad_version,
+      "URL" => nomad_ent_url,
+      "USER" => nomad_user,
+      "GROUP" => nomad_group,
+      "HOME" => nomad_home
+    }
+
+    config.vm.provision "file", source: "configs/nomad.conf", destination: "/tmp/nomad.hcl"
+    config.vm.provision "shell", inline: $nomad_setup, privileged: false
+  end
 
   if (docker_install)
     config.vm.provision "shell",
