--- a/.gitignore
+++ b/.gitignore
@@ -77,4 +77,5 @@ override.tf.json
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,macos,terraform
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
-
+.terraform
+terraform.tfstate
