--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -64,6 +64,7 @@ Vagrant.configure("2") do |config|
    # Increase memory for Parallels Desktop
    config.vm.provider "parallels" do |p, o|
     p.memory = 8192
+    p.cpus = 2
   end
 
   # Increase memory for Virtualbox
@@ -76,6 +77,7 @@ Vagrant.configure("2") do |config|
   ["vmware_fusion", "vmware_workstation"].each do |p|
     config.vm.provider p do |v|
       v.vmx["memsize"] = 8192
+      v.vmx["numvcpus"] = 2
     end
   end
 
