--- a/vagrant/configs/nomad.conf
+++ b/vagrant/configs/nomad.conf
@@ -26,3 +26,11 @@ plugin "raw_exec" {
 consul {
   address = "127.0.0.1:8500"
 }
+
+telemetry {
+  collection_interval = "10s"
+  disable_hostname = true
+  prometheus_metrics = true
+  publish_allocation_metrics = true
+  publish_node_metrics = true
+}
