--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,4 @@ override.tf.json
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 .terraform
 terraform.tfstate
+.terraform.lock.hcl
