--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -19,7 +19,6 @@ box_version = ENV['BOX_VERSION'] || "202103.18.0"
 vault_install = ["true", "1"].include?((ENV['VAULT_INSTALL'] || true).to_s.downcase)
 vault_host_port = ENV['VAULT_HOST_PORT'] || 8200
 vault_version = ENV['VAULT_VERSION'] || "1.7.1"
-vault_ent_url = ENV['VAULT_ENT_URL']
 vault_group = "vault"
 vault_user = "vault"
 vault_comment = "Vault"
@@ -97,40 +96,33 @@ Vagrant.configure("2") do |config|
 
   # Set box version
   config.vm.box = base_box
-  #config.vm.box_version = box_version
+  config.vm.box_version = box_version
 
   # Set hostname
   config.vm.hostname = "nomad"
-
+  
+  ansible_tags = ['common']
+  # Forward Vault port
+  if (vault_install)
+    config.vm.network :forwarded_port, guest: 8200, host: vault_host_port, auto_correct: true
+    ansible_tags.concat(['vault'])
+  end
+  
   config.vm.provision :ansible_local do |ansible|
     ansible.playbook = "ansible/playbook.yml"
     ansible.inventory_path = "ansible/inventory"
     ansible.config_file = "ansible/ansible.cfg"
 	  ansible.limit = 'all'
+	  ansible.tags = ansible_tags
+    ansible.extra_vars = {
+      vault_group: vault_group,
+      vault_user: vault_user,
+      vault_home: vault_home,
+      vault_version: vault_version,
+    }
 
-#   # Bootstrap the vm
-#   config.vm.provision "shell",
-#   path: "scripts/base-setup.sh"
-
-#   # Forward Ingress port
-#   config.vm.network :forwarded_port, guest: 8080, host: 8080, auto_correct: true
-
-#   if (vault_install)
-#     # Forward Vault port
-#     config.vm.network :forwarded_port, guest: 8200, host: vault_host_port, auto_correct: true
-
-#     # Install Vault
-#     config.vm.provision "shell",
-#     path: "scripts/vault-install.sh",
-#     env: {
-#       "GROUP" => vault_group,
-#       "USER" => vault_user,
-#       "COMMENT" => vault_comment,
-#       "HOME" => vault_home,
-#       "VERSION" => vault_version,
-#       "URL" => vault_ent_url,
-#     }
-#   end
+  # Forward Ingress port
+  config.vm.network :forwarded_port, guest: 8080, host: 8080, auto_correct: true
 
 #   if (consul_install)
 #     # Forward Consul port
