--- a/vagrant/ansible/playbook.yml
+++ b/vagrant/ansible/playbook.yml
@@ -1,7 +1,14 @@
 ---
-- name: Hashicorp-Labs deploy
+- name: Hashicorp-Labs base setup
   hosts: all
   become: yes
   roles:
     - common
   tags: [ common ]
+
+- name: Vault installation
+  hosts: all
+  become: yes
+  roles:
+    - vault
+  tags: [ vault ]
