--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -107,6 +107,13 @@ Vagrant.configure("2") do |config|
     config.vm.network :forwarded_port, guest: 8200, host: vault_host_port, auto_correct: true
     ansible_tags.concat(['vault'])
   end
+  if (consul_install)
+    config.vm.network :forwarded_port, guest: 8500, host: consul_host_port, auto_correct: true
+    ansible_tags.concat(['consul', 'envoy'])
+  end
+  if (cni_install)
+    ansible_tags.concat(['cni'])
+  end
   
   config.vm.provision :ansible_local do |ansible|
     ansible.playbook = "ansible/playbook.yml"
@@ -114,40 +121,22 @@ Vagrant.configure("2") do |config|
     ansible.config_file = "ansible/ansible.cfg"
 	  ansible.limit = 'all'
 	  ansible.tags = ansible_tags
+    # ansible.verbose = '-vvv'
     ansible.extra_vars = {
       vault_group: vault_group,
       vault_user: vault_user,
       vault_home: vault_home,
       vault_version: vault_version,
+      consul_group: consul_group,
+      consul_user: consul_user,
+      consul_home: consul_home,
+      consul_version: consul_version,
+      envoy_version: envoy_version,
+      cni_version: cni_version,
     }
 
   # Forward Ingress port
   config.vm.network :forwarded_port, guest: 8080, host: 8080, auto_correct: true
-
-#   if (consul_install)
-#     # Forward Consul port
-#     config.vm.network :forwarded_port, guest: 8500, host: consul_host_port, auto_correct: true
-
-#     # Install Consul
-#     config.vm.provision "file", source: "configs/prometheus-service.json", destination: "/tmp/prometheus-service.json"
-#     config.vm.provision "file", source: "configs/grafana-service.json", destination: "/tmp/grafana-service.json"
-#     config.vm.provision "shell",
-#     path: "scripts/consul-install.sh",
-#     env: {
-#       "GROUP" => consul_group,
-#       "USER" => consul_user,
-#       "COMMENT" => consul_comment,
-#       "HOME" => consul_home,
-#       "VERSION" => consul_version,
-#       "URL" => consul_ent_url,
-#       "USER" => consul_user,
-#       "GROUP" => consul_group,
-#       "ENVOY_VERSION" => envoy_version,
-#       "CNI_VERSION" => cni_version,
-#       "CNI_INSTALL" => cni_install,
-#       "PRIVATE_IP" => private_ip,
-#     }
-#   end
 
 #   if (nomad_install)
 #     # Forward Nomad port
