--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -38,7 +38,7 @@ cni_version = ENV['CNI_VERSION'] || "0.9.0"
 # Nomad variables
 nomad_install = ["true", "1"].include?((ENV['NOMAD_INSTALL'] || true).to_s.downcase)
 nomad_host_port = ENV['NOMAD_HOST_PORT'] || 4646
-nomad_version = ENV['NOMAD_VERSION'] || "1.0.4"
+nomad_version = ENV['NOMAD_VERSION'] || "1.0.5"
 nomad_group = "nomad"
 nomad_user = "nomad"
 nomad_home = "/srv/nomad"
@@ -56,6 +56,9 @@ grafana_version = ENV['GRAFANA_VERSION'] || "7.3.5-1"
 
 # Tests tag to permorm only tests ansible tasks
 tests_tag = ENV['TESTS_ONLY']
+
+# Provision only these ansible roles
+tags_only = ENV['TAGS_ONLY']
 
 Vagrant.configure("2") do |config|
   config.vm.define "hashicorp-labs"
@@ -119,6 +122,10 @@ Vagrant.configure("2") do |config|
   end
   if (monitoring_install)
     ansible_tags.concat(['monitoring'])
+  end
+  
+  if !tags_only.to_s.empty?
+    ansible_tags = [tags_only.split(",")]
   end
   
   if (tests_tag == "true")
