--- a/vagrant/ansible/roles/consul/vars/main.yml
+++ b/vagrant/ansible/roles/consul/vars/main.yml
@@ -9,5 +9,5 @@ consul_data_dir: /opt/consul/data
 consul_tls_dir: /opt/consul/tls
 consul_profile_script: /etc/profile.d/consul.sh
 consul_flags: "-dev -ui -client 0.0.0.0"
-envoy_url: https://tetrate.bintray.com/getenvoy-rpm/centos/7/x86_64/stable/Packages/getenvoy-envoy-{{ envoy_version }}.x86_64.rpm
+envoy_url: https://rpm.dl.getenvoy.io/public/rpm/any-distro/any-version/x86_64/getenvoy-envoy-{{ envoy_version }}.x86_64.rpm
 cni_url: https://github.com/containernetworking/plugins/releases/download/v{{ cni_version }}/cni-plugins-linux-amd64-v{{ cni_version }}.tgz
