add dep for docker

--- a/vagrant/ansible/roles/docker/tasks/main.yml
+++ b/vagrant/ansible/roles/docker/tasks/main.yml
@@ -9,6 +9,7 @@
     - "{{ docker_ce_rootless_extras_url }}"
     - "{{ docker_ce_url }}"
     - "{{ docker_ce_cli_url }}"
+    - "{{ docker_scan_url }}"
   register: downloaded_files
   tags: [ docker ]
 
