--- a/vagrant/ansible/roles/common/vars/main.yml
+++ b/vagrant/ansible/roles/common/vars/main.yml
@@ -1,14 +1,22 @@
 ---
 # vars file for common
-packages:
+common_packages:
   - ntp
   - git
   - wget
   - unzip
   - jq
   - dnsmasq
-  - java-1.8.0-openjdk
-  - bind-utils
   - tcpdump
-  - nc
   - vim
+
+debian_packages:
+  - chrony
+  - openjdk-8-jdk
+  - dnsutils
+  - netcat
+
+redhat_packages:
+  - bind-utils
+  - java-1.8.0-openjdk
+  - nc
