--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -12,8 +12,8 @@ vagrant_mem = ENV['VAGRANT_MEM'] || 8192
 private_ip = ENV['PRIVATE_IP'] || "192.168.50.153"
 
 # Base box selection
-base_box = ENV['BASE_BOX'] || "bento/centos-7"
-box_version = ENV['BOX_VERSION'] || "202103.18.0"
+base_box = ENV['BASE_BOX'] || "rkrause/ubuntu-21.10-arm64"
+box_version = ENV['BOX_VERSION'] || "1.0.0"
 
 # Vault variables
 vault_install = ["true", "1"].include?((ENV['VAULT_INSTALL'] || true).to_s.downcase)
@@ -53,7 +53,7 @@ envoy_version = ENV['ENVOY_VERSION'] || "1.18.2.p0.gd362e79-1p75.g76c310e"
 # Monitoring variables
 monitoring_install = ["true", "1"].include?((ENV['MONITORING_INSTALL'] || true).to_s.downcase)
 prometheus_version = ENV['PROMETHEUS_VERSION'] || "2.28.1"
-grafana_version = ENV['GRAFANA_VERSION'] || "8.1.0-1"
+grafana_version = ENV['GRAFANA_VERSION'] || "8.1.0"
 
 # Tests tag to permorm only tests ansible tasks
 tests_tag = ENV['TESTS_ONLY']
@@ -156,12 +156,12 @@ Vagrant.configure("2") do |config|
     }
 
   # Forward Ingress port
-  config.vm.network :forwarded_port, guest: 8080, host: 8080, auto_correct: true
+  config.vm.network :forwarded_port, guest: 8080, host: 8080, auto_correct: true 
 
   end
 
-  config.ssh.username = 'root'
-  config.ssh.password = 'vagrant'
-  config.ssh.insert_key = 'true'
+  # config.ssh.username = 'root'
+  # config.ssh.password = 'vagrant'
+  # config.ssh.insert_key = 'true'
 
 end
