--- a/vagrant/ansible/roles/consul/vars/main.yml
+++ b/vagrant/ansible/roles/consul/vars/main.yml
@@ -1,6 +1,6 @@
 ---
 # vars file for consul
-consul_zip: consul_{{ consul_version }}_linux_amd64.zip
+consul_zip: consul_{{ consul_version }}_linux_{{ 'arm64' if ansible_facts['architecture'] == 'aarch64' else 'amd64' }}.zip
 consul_url: "https://releases.hashicorp.com/consul/{{ consul_version }}/{{ consul_zip }}"
 consul_dir: /usr/local/bin
 consul_path: "{{ consul_dir }}/consul"
@@ -9,5 +9,6 @@ consul_data_dir: /opt/consul/data
 consul_tls_dir: /opt/consul/tls
 consul_profile_script: /etc/profile.d/consul.sh
 consul_flags: "-dev -ui -client 0.0.0.0"
-envoy_url: https://rpm.dl.getenvoy.io/public/rpm/any-distro/any-version/x86_64/getenvoy-envoy-{{ envoy_version }}.x86_64.rpm
+envoy_url_rpm: https://rpm.dl.getenvoy.io/public/rpm/any-distro/any-version/x86_64/getenvoy-envoy-{{ envoy_version }}.x86_64.rpm
+envoy_url_deb: "https://deb.dl.getenvoy.io/public/deb/any-distro/pool/any-version/main/g/ge/getenvoy-envoy_{{ envoy_version }}_amd64.deb"
 cni_url: https://github.com/containernetworking/plugins/releases/download/v{{ cni_version }}/cni-plugins-linux-amd64-v{{ cni_version }}.tgz
