--- a/vagrant/ansible/roles/docker/tasks/main.yml
+++ b/vagrant/ansible/roles/docker/tasks/main.yml
@@ -1,33 +1,39 @@
 ---
 # tasks file for docker
 - name: Download Containerd and Docker pkgs
+  vars:
+  - target_os: "{{ ansible_facts['os_family']|lower }}"
   get_url:
     url: "{{ item }}"
     dest: /tmp
-  loop:
-    - "{{ containerd_url }}"
-    - "{{ docker_ce_rootless_extras_url }}"
-    - "{{ docker_ce_url }}"
-    - "{{ docker_ce_cli_url }}"
-    - "{{ docker_scan_url }}"
+  loop: "{{ lookup('vars', target_os + '_urls') }}"
+  retries: 3
   register: downloaded_files
   tags: [ docker ]
 
-- name: Get rpm files list
+- name: Get package files list
   find:
     paths: 
       - /tmp
-    patterns: "*.rpm"
-  register: rpm_files
+    patterns: ".*(deb|rpm)"
+    use_regex: true
+  register: pkg_files
 
 - name: Get deps
   set_fact:
-    rpm_list: "{{ rpm_files.files | map(attribute='path') | list}}"
+    pkg_list: "{{ pkg_files.files | map(attribute='path') | list}}"
 
-- name: Install Containerd and Docker
-  yum:
-    name: "{{rpm_list}}"
-    state: present
+- name: Install Containerd and Docker in Ubuntu/Debian
+  ansible.builtin.apt:
+    deb: "{{item}}"
+  with_items: "{{ pkg_list }}"
+  when: ansible_facts['os_family'] == "Debian"
+
+- name: Install Containerd and Docker in Centos/RedHat
+  ansible.builtin.yum:
+    name: "{{pkg_list}}"
+  with_items: "{{ pkg_list }}"
+  when: ansible_facts['os_family'] == "RedHat"
 
 - name: Add Nomad user to Docker group
   ansible.builtin.user:
