--- a/vagrant/ansible/roles/monitoring/tasks/main.yml
+++ b/vagrant/ansible/roles/monitoring/tasks/main.yml
@@ -49,8 +49,8 @@
     group: prometheus
     mode: '0755'
   loop:
-    - "/tmp/prometheus-{{ prometheus_version }}.linux-amd64/prometheus"
-    - "/tmp/prometheus-{{ prometheus_version }}.linux-amd64/promtool"
+    - "/tmp/prometheus-{{ prometheus_version }}.linux-{{ 'arm64' if ansible_facts['architecture'] == 'aarch64' else 'amd64' }}/prometheus"
+    - "/tmp/prometheus-{{ prometheus_version }}.linux-{{ 'arm64' if ansible_facts['architecture'] == 'aarch64' else 'amd64' }}/promtool"
 
 - name: Move configs to Prometheus folder
   copy:
@@ -60,8 +60,8 @@
     group: prometheus
     mode: '0755'
   loop:
-    - "/tmp/prometheus-{{ prometheus_version }}.linux-amd64/consoles"
-    - "/tmp/prometheus-{{ prometheus_version }}.linux-amd64/console_libraries"
+    - "/tmp/prometheus-{{ prometheus_version }}.linux-{{ 'arm64' if ansible_facts['architecture'] == 'aarch64' else 'amd64' }}/consoles"
+    - "/tmp/prometheus-{{ prometheus_version }}.linux-{{ 'arm64' if ansible_facts['architecture'] == 'aarch64' else 'amd64' }}/console_libraries"
 
 - name: Set Prometheus systemd service
   blockinfile:
@@ -92,15 +92,21 @@
     enabled: yes
     state: started
 
-- name: Download Grafana stuff
+- name: Download Grafana
   get_url:
-    url: "{{ grafana_url }}"
+    url: "{{ grafana_url }}.{{ 'deb' if ansible_facts['os_family'] == 'Debian' else 'rpm' }}"
     dest: /tmp
 
-- name: Install Grafana
-  yum:
+- name: Install Grafana in Ubuntu/Debian
+  ansible.builtin.apt:
+    deb: "/tmp/grafana_{{ grafana_version }}_{{ 'arm64' if ansible_facts['architecture'] == 'aarch64' else 'amd64' }}.deb"
+  when: ansible_facts['os_family'] == "Debian"
+
+- name: Install Grafana in Centos/RedHat
+  ansible.builtin.yum:
     name: "/tmp/grafana-{{ grafana_version }}.x86_64.rpm"
     state: present
+  when: ansible_facts['os_family'] == "RedHat"
 
 - name: Create Grafana plugins dir
   ansible.builtin.file:
