--- a/vagrant/ansible/roles/monitoring/vars/main.yml
+++ b/vagrant/ansible/roles/monitoring/vars/main.yml
@@ -1,4 +1,4 @@
 ---
 # vars file for monitoring
-prometheus_url: "https://github.com/prometheus/prometheus/releases/download/v{{ prometheus_version }}/prometheus-{{ prometheus_version }}.linux-amd64.tar.gz"
-grafana_url: "https://dl.grafana.com/oss/release/grafana-{{ grafana_version }}.x86_64.rpm"
+prometheus_url: "https://github.com/prometheus/prometheus/releases/download/v{{ prometheus_version }}/prometheus-{{ prometheus_version }}.linux-{{ 'arm64' if ansible_facts['architecture'] == 'aarch64' else 'amd64' }}.tar.gz"
+grafana_url: "https://dl.grafana.com/oss/release/grafana_{{ grafana_version }}_{{ 'arm64' if ansible_facts['architecture'] == 'aarch64' else 'amd64' }}"
