fix ip advertising and data folders

--- a/vagrant/ansible/roles/nomad/files/nomad.conf
+++ b/vagrant/ansible/roles/nomad/files/nomad.conf
@@ -1,11 +1,11 @@
-data_dir  = "/var/lib/nomad"
+data_dir  = "/opt/nomad/data"
 
 bind_addr = "0.0.0.0"
 
 advertise {
-  http = "192.168.50.153:4646"
-  rpc  = "192.168.50.153:4647"
-  serf = "192.168.50.153:4648"
+  http = "{{ GetPrivateIP }}:4646"
+  rpc  = "{{ GetPrivateIP }}:4647"
+  serf = "{{ GetPrivateIP }}:4648"
 }
 
 server {
