--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -9,11 +9,17 @@ vagrant_cpu_num = ENV['VAGRANT_CPU_NUM'] || 2
 vagrant_mem = ENV['VAGRANT_MEM'] || 8192
 
 # Networking
-private_ip = ENV['PRIVATE_IP'] || "192.168.50.153"
+# private_ip = ENV['PRIVATE_IP'] || "192.168.50.153"
 
 # Base box selection
-base_box = ENV['BASE_BOX'] || "rkrause/ubuntu-21.10-arm64"
-box_version = ENV['BOX_VERSION'] || "1.0.0"
+host_arch_type = `uname -m`
+if host_arch_type != "arm64"
+  base_box = ENV['BASE_BOX'] || "bento/ubuntu-21.04"
+  box_version = ENV['BOX_VERSION'] || "202109.07.0"
+else
+  base_box = ENV['BASE_BOX'] || "rkrause/ubuntu-21.10-arm64"
+  box_version = ENV['BOX_VERSION'] || "1.0.0"
+end
 
 # Vault variables
 vault_install = ["true", "1"].include?((ENV['VAULT_INSTALL'] || true).to_s.downcase)
@@ -45,16 +51,24 @@ nomad_home = "/srv/nomad"
 
 # Docker variables
 docker_install = ["true", "1"].include?((ENV['DOCKER_INSTALL'] || true).to_s.downcase)
-containerd_version = ENV['CONTAINERD_VERSION'] || "1.4.9-3.1"
-docker_ce_version = ENV['DOCKER_CE_VERSION'] || "20.10.8-3"
-docker_scan_version = ENV['DOCKER_SCAN_VERSION'] || "0.8.0-3"
+if base_box != "bento/centos-7"
+  containerd_version = ENV['CONTAINERD_VERSION'] || "1.4.11-1"
+  docker_ce_version = ENV['DOCKER_CE_VERSION'] || "20.10.10~3-0~ubuntu"
+else
+  containerd_version = ENV['CONTAINERD_VERSION'] || "1.4.9-3.1"
+  docker_ce_version = ENV['DOCKER_CE_VERSION'] || "20.10.8-3"
+end
 envoy_version = ENV['ENVOY_VERSION'] || "1.18.2.p0.gd362e79-1p75.g76c310e"
+docker_scan_version = ENV['DOCKER_SCAN_VERSION'] || "0.8.0-3"
 
 # Monitoring variables
 monitoring_install = ["true", "1"].include?((ENV['MONITORING_INSTALL'] || true).to_s.downcase)
 prometheus_version = ENV['PROMETHEUS_VERSION'] || "2.28.1"
-grafana_version = ENV['GRAFANA_VERSION'] || "8.1.0"
-
+if base_box != "bento/centos-7"
+  grafana_version = ENV['GRAFANA_VERSION'] || "8.1.0"
+else
+  grafana_version = ENV['GRAFANA_VERSION'] || "8.1.0-1"
+end
 # Tests tag to permorm only tests ansible tasks
 tests_tag = ENV['TESTS_ONLY']
 
@@ -68,8 +82,8 @@ Vagrant.configure("2") do |config|
   config.ssh.insert_key = false
 
   # Setup networking
-  config.vm.network :private_network, ip: private_ip
-  config.vm.network "private_network", type: "dhcp"
+  # config.vm.network :private_network, ip: private_ip
+  # config.vm.network "private_network", type: "dhcp"
   
   # Increase memory for Virtualbox
   config.vm.provider "virtualbox" do |vb|
@@ -84,6 +98,7 @@ Vagrant.configure("2") do |config|
       v.vmx["memsize"] = vagrant_mem
       v.vmx["numvcpus"] = vagrant_cpu_num
       v.vmx["tools.upgrade.policy"] = "manual"
+      v.vmx["virtualhw.version"] = 18
     end
   end
   
@@ -153,6 +168,7 @@ Vagrant.configure("2") do |config|
       docker_scan_version: docker_scan_version,
       prometheus_version: prometheus_version,
       grafana_version: grafana_version,
+      faas_arm: host_arch_type != "arm64",
     }
 
   # Forward Ingress port
